# liblqr

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  Makefile.old  NEWS  README  README.Windows  TODO  aclocal.m4  autodeb  autogen.sh  config.h.in  configure  configure.ac  generate_macros_h  indent_em_all  lqr-1.pc.in  makedist  resetdeb
debian.in/gutsy/debian.template/: changelog  control  examples  liblqr-1.doc-base.EX  liblqr1-dev.install  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  rules  shlibs.local.ex
debian.in/hardy/debian.template/: control  copyright  docs  examples  liblqr-1-0-dev.doc-base  liblqr-1-0-dev.docs  liblqr-1-0-dev.install  liblqr-1-0.install  liblqr-1-0.symbols  liblqr1-dev.install  liblqr1.install  manpage.1.ex  manpage.xml.ex  rules  watch
docs/: Makefile  README  gen-man-makefile.am  liblqr_manual.docbook  lqr_style.xsl  lqr_style_man.xsl  lqr_style_onepage.xsl  manual.txt  redir-html
examples/: .indent.pro  Makefile  README  image.cpp  image.h  liquidrescale-basic.cpp  liquidrescale-basic.h  liquidrescale.cpp  liquidrescale.h
lqr/: .indent.pro  Makefile.am  Makefile.in  lqr.h  lqr_all.h  lqr_attached_list.h  lqr_base.h  lqr_carver.c  lqr_carver.h  lqr_carver_bias.c  lqr_carver_bias.h  lqr_carver_bias_priv.h  lqr_carver_bias_pub.h  lqr_carver_list.c  lqr_carver_list.h  lqr_carver_list_priv.h  lqr_carver_list_pub.h  lqr_carver_priv.h  lqr_carver_pub.h  lqr_carver_rigmask.c  lqr_carver_rigmask.h  lqr_carver_rigmask_priv.h  lqr_carver_rigmask_pub.h  lqr_colour.c  lqr_colour.h  lqr_cursor.c  lqr_cursor.h  lqr_cursor_priv.h  lqr_cursor_pub.h  lqr_energy.c  lqr_energy.h  lqr_energy_buffer.c  lqr_energy_buffer.h  lqr_energy_buffer_priv.h  lqr_energy_buffer_pub.h  lqr_energy_priv.h  lqr_energy_pub.h  lqr_gradient.c  lqr_gradient.h  lqr_gradient_priv.h  (+23 more)
man/: LqrColDepth.3  LqrImageType.3  LqrRetVal.3  Makefile.am  Makefile.in  lqr_carver_attach.3  lqr_carver_bias_add.3  lqr_carver_bias_add_area.3  lqr_carver_bias_add_rgb_area.3  lqr_carver_bias_add_xy.3  lqr_carver_bias_clear.3  lqr_carver_bias_set_energy_function.3  lqr_carver_bias_set_energy_function_builtin.3  lqr_carver_cancel.3  lqr_carver_destroy.3  lqr_carver_flatten.3  lqr_carver_get_bpp.3  lqr_carver_get_channels.3  lqr_carver_get_col_depth.3  lqr_carver_get_depth.3  lqr_carver_get_energy.3  lqr_carver_get_energy_image.3  lqr_carver_get_enl_step.3  lqr_carver_get_height.3  lqr_carver_get_image_type.3  lqr_carver_get_orientation.3  lqr_carver_get_ref_height.3  lqr_carver_get_ref_width.3  lqr_carver_get_width.3  lqr_carver_init.3  lqr_carver_list_current.3  lqr_carver_list_foreach.3  lqr_carver_list_next.3  lqr_carver_list_start.3  lqr_carver_new.3  lqr_carver_new_ext.3  lqr_carver_resize.3  lqr_carver_rigmask_add.3  lqr_carver_rigmask_add_area.3  lqr_carver_rigmask_add_rgb_area.3  (+47 more)
