## Process this file with automake to produce Makefile.in

SUBDIRS = lqr

EXTRA_DIST = \
	docs		\
	examples/liquidrescale.cpp \
	examples/liquidrescale.h   \
	examples/liquidrescale-basic.cpp \
	examples/liquidrescale-basic.h   \
	examples/Makefile \
	BUGS		\
	autogen.sh	

DISTCLEANFILES = \
		 autom4te.cache


lqr_pkgconfig_DATA = @LIBRARY_SNAME@.pc

lqr_pkgconfigdir = $(libdir)/pkgconfig
